# rabbitMq-docker-python

./: consumer_raw.py  log_manobra.txt  pyproject.toml  teste-ssh.txt
