[tool.poetry]
name = "machine learn"
version = "0.1.0"
description = ""
authors = ["Dellos <DellosDevOps@uotlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.7.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
